--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Hyperspace by HTML5 UP</title>
+		<title>Amber Lowe-Where I am Going</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Newly Aquired Skills</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html"  class="active">Elements</a></li>
+						<li><a href="index.html">Projects</a></li>
+						<li><a href="generic.html">Skills Mastered</a></li>
+						<li><a href="elements.html"  class="active">Continued Learning</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -36,7 +36,7 @@
 
 							<!-- Text -->
 								<section>
-									<h2>Text</h2>
+									<h2>Goals</h2>
 									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
 									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
 									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
@@ -47,9 +47,9 @@
 									<h3>Heading Level 3</h3>
 									<h4>Heading Level 4</h4>
 									<hr />
-									<h3>Blockquote</h3>
+									<h3>Planning for Success</h3>
 									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h3>Preformatted</h3>
+									<h3>Stepping towards Success </h3>
 									<pre><code>i = 0;
 
 while (!deck.isInOrder()) {
@@ -66,17 +66,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h2>Lists</h2>
 									<div class="row">
 										<div class="col-6 col-12-medium">
-											<h3>Unordered</h3>
+											<h3>Steps Toward Success</h3>
 											<ul>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Sagittis adipiscing.</li>
-												<li>Felis enim feugiat.</li>
+												<li>Made the decison that I wanted a different life</li>
+												<li>Researched Paths Towards My Goals</li>
+												<li>Choose Web Development</li>
 											</ul>
-											<h3>Alternate</h3>
+											<h3>Sacrafices</h3>
 											<ul class="alt">
-												<li>Dolor pulvinar etiam.</li>
-												<li>Sagittis adipiscing.</li>
-												<li>Felis enim feugiat.</li>
+												<li>Nothing of Value is Ever Easy to Achieve</li>
+												<li>Long hours and disappointments</li>
+												<li>The determination to Not Quit</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-medium">
